--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,2 +1,1 @@
-spring.data.mongodb.uri=mongodb://localhost:27017/finddevs
-spring.data.mongodb.auto-index-creation=true
+spring.profiles.active=dev
