Trabalhando com Docker

--- a/backend/src/main/resources/application-dev.properties
+++ b/backend/src/main/resources/application-dev.properties
@@ -1,2 +1,2 @@
-spring.data.mongodb.uri=mongodb://localhost:27017/finddevs
+spring.data.mongodb.uri=mongodb://db:27017/finddevs
 spring.data.mongodb.auto-index-creation=true
