Trabalhando com Docker e Travis CI

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,5 +1,4 @@
 FROM maven:3.6.1-jdk-11-slim
-# COPY ./backend /usr/share/maven/backend
-# WORKDIR /backend
-# CMD ["clean", "spring-boot:run"]
-# ENTRYPOINT ["mvn"]
+COPY . /usr/share/maven/backend
+CMD ["clean", "spring-boot:run"]
+ENTRYPOINT ["mvn"]
