--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,6 +23,10 @@ services:
       - ~/.m2:/root/.m2
     ports:
       - "8080:8080"
+    environment:
+      SPRING_BOOT_ENVIRONMENT: prod
+    env_file:
+      - .env
     command: mvn clean spring-boot:run
     networks:
       - rede-finddev
