--- a/backend/src/main/resources/application-dev.properties
+++ b/backend/src/main/resources/application-dev.properties
@@ -1,2 +1,7 @@
-spring.data.mongodb.uri=mongodb://db:27017/finddevs
+# In the development profile, a connection to a local database is made.
+# No image is built or a docker container is raised in this profile.
+# Although it was perfectly feasible to develop connected to the online database, 
+# this option was not taken because the connection string to the database is passed through an environment variable.
+
+spring.data.mongodb.uri=mongodb://localhost:27017/finddevs
 spring.data.mongodb.auto-index-creation=true
