--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,2 +1,6 @@
-spring.profiles.active=prod
-#server.port=${PORT}
+# The SPRING_BOOT_ENVIRONMENT environment variable, which defines the application's execution environment, 
+# is set to "dev" by default. In a staging environment, when the container is run, 
+# the variable is passed through the .env file. In production, the variable is passed through the Travis CI 
+# continuous integration tool.
+
+spring.profiles.active=${SPRING_BOOT_ENVIRONMENT:dev}
