--- a/backend/src/main/resources/application-prod.properties
+++ b/backend/src/main/resources/application-prod.properties
@@ -1,2 +1,8 @@
+# Heroku will be deployed and it is responsible for executing the containers. 
+# This means that Heroku will define which door will be "opened" to make it accessible from the outside. 
+# This port is given by the $ PORT environment variable that will be defined when executing our image. 
+# In this way, we define "server.port" for the environment variable defined by Heroku - $ PORT - 
+# or the default port of the TomCat server that comes up with Spring Boot which is 8080.
 spring.data.mongodb.uri=${MONGO_URL}
 spring.data.mongodb.auto-index-creation=true
+server.port=${PORT} || 8080
