--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,4 +1,3 @@
 FROM maven:3.6.1-jdk-11-slim
 COPY . /usr/share/maven/backend
-CMD ["clean", "spring-boot:run"]
-ENTRYPOINT ["mvn"]
+CMD ["mvn", "clean", "spring-boot:run"]
