--- a/backend/src/main/resources/application-prod.properties
+++ b/backend/src/main/resources/application-prod.properties
@@ -5,4 +5,4 @@
 # or the default port of the TomCat server that comes up with Spring Boot which is 8080.
 spring.data.mongodb.uri=${MONGO_URL}
 spring.data.mongodb.auto-index-creation=true
-server.port=${PORT}
+server.port=${PORT:8080}
